# http_facade_server

./: .gitlab-ci.yml  .gitmodules  .vcpkg-configuration.json  CMakeLists.txt  CODE_DESIGN.md  Dockerfile  NEXT_STEPS.md  PROJECT_IMPLEMENTATION_REPORT_V1.md  README.md  backendify.config  docker-compose.yml  entrypoint.sh  vcpkg.json
BackendServers/: BackendApi.cpp  ReadMe.md
src/: main.cpp
src/cache/: InMemoryCache.cpp  InMemoryCache.hpp  RedisCache.cpp  RedisCache.hpp
src/config/: AppConfig.hpp
src/core/: AsyncHttpClientSession.hpp  Backendify.cpp  Backendify.hpp  BeastHttpServer.cpp  BeastHttpServer.hpp  CircuitBreaker.cpp  CircuitBreaker.hpp  HttpServerSession.cpp  HttpServerSession.hpp  ThreadLocalTime.cpp  ThreadLocalTime.hpp  ThreadPoolQueue.hpp
src/interfaces/: CacheInterface.hpp  ILogger.hpp  IStatsDClient.hpp
src/logging/: ConsoleLogger.cpp  ConsoleLogger.hpp
src/metrics/: DummyStatsDClient.cpp  DummyStatsDClient.hpp  StatsDClient.cpp  StatsDClient.hpp
src/models/: BackendUrlInfo.hpp  CompanyInfo.hpp
src/utils/: Utils.hpp
tests/: CMakeLists.txt  test_backendify.cpp  test_inmemorycache.cpp  test_main.cpp  test_utils.cpp
